[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sym_metanet"
version = "0.0.1"
authors = [
  { name="Filippo Airaldi", email="filippoairaldi@gmail.com" },
]
description = "Highway Traffic Symbolic Modelling with METANET framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "networkx >= 2.8.7",
]

[project.optional-dependencies]
casadi = [
    "casadi >= 3.5.5",
]

[project.urls]
"Homepage" = "https://github.com/FilippoAiraldi/sym-metanet"
"Bug Tracker" = "https://github.com/FilippoAiraldi/sym-metanet/issues"
