[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sym_metanet"
version = "1.0.7"
authors = [
  { name="Filippo Airaldi", email="filippoairaldi@gmail.com" },
]
description = "Symbolic Modelling of Highway Traffic Networks with METANET"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
	"Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "networkx >= 2.8.4",
]

[project.optional-dependencies]
all = [
    "numpy >= 1.23.4",
    "casadi >= 3.6.0",
]

[project.urls]
"Homepage" = "https://github.com/FilippoAiraldi/sym-metanet"
"Bug Tracker" = "https://github.com/FilippoAiraldi/sym-metanet/issues"

[tool.setuptools]
license-files = [
	"LICENSE",
]

[tool.isort]
profile = "black"
